# infa_sem3_2021

./: .gitignore  CMakeLists.txt  main.cpp
control/: taskA.cpp  taskA.h  taskB.cpp  taskB.h  taskC.cpp  taskC.h  taskC.input  taskD.cpp  taskD.h  taskD.input  taskE.cpp  taskE.h
usables/: graph.cpp  graph.h  my_tree.cpp  my_tree.h
usables/containers/: array.h  cyclic_array.h  deque.h  list.h  set.h  stack.h
